# block-metrics

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: block_fetcher.rs  main.rs  metrics.rs  web.rs
